# sasrec-longseq

./: .gitignore  EXERCISES.md  README.md  pyproject.toml  requirements.txt
scripts/: compare_losses.py  profile_throughput.py  run_scaling.py
src/sasrec_longseq/: losses_full.py  profiling.py  sampling.py  scaling.py
src/sasrec_longseq/core/: __init__.py
tests/: test_losses_full.py  test_profiling.py  test_sampling.py  test_scaling.py
