[project]
name = "sasrec-longseq"
version = "0.1.0"
description = "Efficiency and longer-sequence experiments on SASRec: vectorized negative sampling, full-softmax vs sampled loss, sequence-length scaling (Table V), and throughput profiling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DoodlingAWorld" }]
dependencies = ["torch>=2.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7", "tqdm>=4.65"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
